--- a/src/components/organisms/sections/Reviews/reviews.scss
+++ b/src/components/organisms/sections/Reviews/reviews.scss
@@ -3,12 +3,12 @@
   .item {
     .fa-star {
       color: #ffc107;
-      margin: 0 .2rem;
+      margin: 0 0.2rem;
     }
   }
-  .mdb-rating{
+  .mdb-rating {
     justify-content: center !important;
-    i{
+    i {
       font-size: 1.4rem;
     }
   }
@@ -19,5 +19,5 @@
 
 /** 
  * SPDX-License-Identifier: (EUPL-1.2)
- * Copyright © 2019-2020 Werbeagentur Christian Aichner
+ * Copyright © 2019-2020 InspireMedia GmbH
  */
