--- a/src/components/molecules/CookieModal/cookie.scss
+++ b/src/components/molecules/CookieModal/cookie.scss
@@ -18,5 +18,5 @@
 
 /**
  * SPDX-License-Identifier: (EUPL-1.2)
- * Copyright © 2020 Werbeagentur Christian Aichner
+ * Copyright © 2020 InspireMedia GmbH
  */
