--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -1,9 +1,8 @@
 $dark: #212529;
 $red: #f61a42;
-$green: #77bd43;
-$pink: #ea4aaa;
+$blue: #0096d6;
 
 /** 
  * SPDX-License-Identifier: (EUPL-1.2)
- * Copyright © 2020 Werbeagentur Christian Aichner
+ * Copyright © 2020 InspireMedia GmbH
  */
