--- a/src/components/organisms/sections/CallToAction/callToAction.scss
+++ b/src/components/organisms/sections/CallToAction/callToAction.scss
@@ -120,5 +120,5 @@
 
 /**
  * SPDX-License-Identifier: (EUPL-1.2)
- * Copyright © 2019-2020 InspireMedia GmbH
+ * Copyright © 2020 InspireMedia GmbH
  */
